<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/steelblue2"
    android:orientation="vertical" >

    <!-- Header aligned to top -->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </RelativeLayout>

    <!-- Footer aligned to bottom -->

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/copyright"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <!-- Content below header and above footer -->

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView1"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/habitonews_logo" />
        
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/app_subText"
            android:textStyle="italic"
            android:textSize="12sp"
            android:textColor="@color/white" />

        <!--  <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="64dp"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/dataProtectionNumber"
            android:textColor="@color/white" />-->
        
    </RelativeLayout>

</RelativeLayout>